# lkmsg

./: CMakeLists.txt  README.md
include/lk/: Channel.h  Listener.h  Message.h  MultiListener.h  messages.h
src/: Channel.cpp  Listener.cpp  Message.cpp  MultiListener.cpp  messages.cpp  test.cpp
